fixed flickering card show modal

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -532,7 +532,7 @@ padding-right:20px;
   opacity: 1;
 }
 
-.card-display:hover {
+.card-display .close:hover {
   opacity: 0.5;
 }
 
